--- a/src/Journey.Exception/ResourceErrorMessage.resx
+++ b/src/Journey.Exception/ResourceErrorMessage.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ACTIVITY_NOT_FOUND" xml:space="preserve">
+    <value>Atividade não encontrada.</value>
+  </data>
+  <data name="DATE_NOT_WITHIN_TRAVEL_PERIOD" xml:space="preserve">
+    <value>A data selecionada para a atividade não coincide com o seu período de viagem.</value>
+  </data>
   <data name="DATE_TRIP_MUST_BE_LATER_THAN_TODAY" xml:space="preserve">
     <value>A data da viagem deve ser posterior a hoje.</value>
   </data>
@@ -128,5 +134,8 @@
   </data>
   <data name="TRIP_NOT_FOUND" xml:space="preserve">
     <value>Viagem não encontrada. </value>
+  </data>
+  <data name="UNKNOWN_ERROR" xml:space="preserve">
+    <value>Erro desconhecido</value>
   </data>
 </root>
